--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Hardware Wallet support for ethers (NodeJS only).",
   "author": "Anders Torbjørnsen <anders.torbjornsen87@gmail.com>",
   "dependencies": {
-    "@ledgerhq/hw-app-eth": "^6.24.0",
-    "@ledgerhq/hw-transport-node-hid": "^6.20.0",
+    "@ledgerhq/hw-app-eth": "~5.11.0",
+    "@ledgerhq/hw-transport-node-hid": "~5.11.0",
     "ethers": "^5.5.4"
   },
   "keywords": [
